Clearing message div to fix spacing bug

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -74,3 +74,7 @@ body {
 .message-emoji {
   max-width: 20px;
 }
+
+.clear {
+  clear: both;
+}
